# arch-manager

./: .editorconfig  .gitignore  AUTOCOMPLETE_IMPLEMENTATION_SUMMARY.md  AUTOCOMPLETE_MULTISELECT_GUIDE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMMIT_MESSAGES.md  FINAL_SUMMARY.md  FONT_QUICKSTART.md  LICENSE  MIGRATION_NOTES.md  REFACTORING_PLAN.md  demo_autocomplete.py  demo_menu.py  demo_progress.py  install-fonts.sh  install.sh  pkgman.py  pkgman.zsh  pyproject.toml  readme.md  requirements.txt  test_autocomplete.py  test_menu.py  test_package_list.py  test_summary.py
.github/workflows/: ci.yml
bridge/: __init__.py  backend.py  errors.py  logging_config.py  protocol.py
docs/: ANALYSIS.md  FONT_MANAGER_GUIDE.md  PROJECT_STRUCTURE.md  REFACTORING_SUMMARY.md
lib/: README.md
lib/backend/: font.zsh  package.zsh  system.zsh  wine.zsh
lib/core/: colors.zsh  detect.zsh  json.zsh  ui.zsh  utils.zsh
scripts/: font-preview.sh
tests/: test_backend.py  test_errors.py  test_logging_config.py  test_protocol.py  test_theme.py
ui/: __init__.py  components.py  theme.py
